# PoseIntelliGraph

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  demo.py  demo_camera.py  demo_video.py  gnn.py  inference.py  main.py  model.py  paper.latex  paper.tex  process_videos.sh  pyproject.toml  references.bib  requirements.txt  run.sh  run_violence_detection.sh  train.ipynb  train.py  transformer.py  violence_detection_model.py  violence_detection_model_v0.1.0.pt  violence_detection_model_v0.2.0.pt  visualization.py
mmpose/: .gitignore  process_videos.sh  setup.py
mmpose/configs/_base_/: default_runtime.py
mmpose/demo/: body3d_pose_lifter_demo.py  bottomup_demo.py  hand3d_internet_demo.py  image_demo.py  inferencer_demo.py  topdown_demo_with_mmdet.py
mmpose/demo/mmdetection_cfg/: cascade_rcnn_x101_64x4d_fpn_1class.py  cascade_rcnn_x101_64x4d_fpn_coco.py  faster_rcnn_r50_fpn_1class.py  faster_rcnn_r50_fpn_coco.py  mask_rcnn_r50_fpn_2x_coco.py  rtmdet_m_8xb32-300e_coco.py  rtmdet_nano_320-8xb32_hand.py  rtmdet_tiny_8xb32-300e_coco.py  ssdlite_mobilenetv2-scratch_8xb24-600e_coco.py  ssdlite_mobilenetv2_scratch_600e_onehand.py  yolov3_d53_320_273e_coco.py  yolox-s_8xb8-300e_coco-face.py
mmpose/demo/mmtracking_cfg/: deepsort_faster-rcnn_fpn_4e_mot17-private-half.py  tracktor_faster-rcnn_r50_fpn_4e_mot17-private.py
mmpose/docs/en/: collect_modelzoo.py  collect_projects.py  conf.py  stats.py
mmpose/docs/zh_cn/: collect_projects.py  conf.py  stats.py
mmpose/mmpose/: __init__.py  registry.py  version.py
mmpose/mmpose.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mmpose/mmpose/apis/: __init__.py  inference.py  inference_3d.py  inference_tracking.py  visualization.py
mmpose/mmpose/codecs/: __init__.py  annotation_processors.py  associative_embedding.py  base.py  decoupled_heatmap.py  edpose_label.py  hand_3d_heatmap.py  image_pose_lifting.py  integral_regression_label.py  megvii_heatmap.py  motionbert_label.py  msra_heatmap.py  regression_label.py  simcc_label.py  spr.py  udp_heatmap.py  video_pose_lifting.py
mmpose/mmpose/datasets/: __init__.py  builder.py  dataset_wrappers.py  samplers.py
mmpose/tools/: test.py  train.py
notebooks/: detectHand.ipynb  hand.ipynb  network_graph.ipynb
pose_estimation/: __init__.py  cli.py
pose_estimation/models/: __init__.py  openpose.py
pose_estimation/processors/: __init__.py  directory_processor.py  frame_processor.py  video_processor.py
pose_estimation/utils/: __init__.py
src/: body.py  config.py  evaluation_utils.py  gnn.py  graph_utils.py  grnn.py  hand.py  hand_model_output_size.json  hand_model_outputsize.py  inference.py  model.py  pose_connections.py  train.py  transformer.py  util.py  visualization.py
(+922 files in other folders)
