[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pose-estimation"
version = "0.1.0"
description = "Video pose estimation using OpenPose"
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "numpy",
    "opencv-contrib-python",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.hatch.build.targets.wheel]
packages = ["."] 