[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pose-estimation"
version = "0.1.0"
description = "Video pose estimation using OpenPose"
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "numpy",
    "opencv-contrib-python",
]

[project.scripts]
pose-estimation = "pose_estimation.cli:main"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "ruff",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "UP", "N", "W", "B", "C4"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
