[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "violence-detection"
version = "0.1.0"
description = "Violence detection using pose estimation and graph neural networks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.ruff]
# Allow lines to be as long as 88.
line-length = 88

# Assume Python 3.8
target-version = "py38"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "mmpose",
]

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
]

# Ignore specific rules.
ignore = [
    "E203",  # Whitespace before ':'
    "E501",  # Line too long
]

# Allow unused imports in `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["gnn", "transformer", "visualization"]
